fix: avoid overflow on layout area

--- a/src/layouts/list-layout.module.css
+++ b/src/layouts/list-layout.module.css
@@ -47,8 +47,9 @@
   height: 100%;
   border: 1px solid var(--palette-1);
   border-radius: var(--rounded);
+  overflow: auto;
 
-  > * {
+  & > * {
     overflow-x: hidden;
   }
 }
